# pyGraz-k8s

./: .gitignore  Pulumi.yaml  __main__.py  cilium.py  demo_routes.yaml  flake.nix  gateway.py  kind-config.yaml  oci_cache.py  pyproject.toml  readme.org  renovate.json  utils.py
cilium/: __init__.py
dns/: __init__.py  cache.py
dns/default_zones/: 0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa.zone  255.in-addr.arpa.zone  localhost.zone
gateway/: __init__.py  external_dns.py  http-gateway.yaml
registry.d/_default/: hosts.toml
